--- a/Staj/Staj.csproj
+++ b/Staj/Staj.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\StajWeb.Models\StajWeb.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
