--- a/Staj.Api/appsettings.json
+++ b/Staj.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Staj;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost, 1453;Database=StajDb;User Id=sa;Password=Staj2024;TrustServerCertificate=true"
   }
 }
