--- a/Staj/appsettings.json
+++ b/Staj/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=Staj;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "AppSettings": {
+    "ApiUrl": "http://localhost:5198"
   }
 }
