ConnectionString fix and refactor HomeController

--- a/Staj/appsettings.json
+++ b/Staj/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Staj;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost,1453;Database=StajDb;User Id=sa;Password=Staj2024;Trusted_Connection=false;TrustServerCertificate=true;"
   },
   "AppSettings": {
     "ApiUrl": "http://localhost:5198"
